fix text alignment on product details page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -260,7 +260,6 @@ body,
 .ProductListPage,
 .product-info {
   margin: 4.5em;
-  text-align: center;
 }
 
 .products-grid {
